remove the enable preview